0.6.10/_sources/gettingstarted/examples/gallery/auto_examples_processing/apodization/index.rst


.. _sphx_glr_gettingstarted_examples_gallery_auto_examples_processing_apodization:

.. _examples-processing-apodization-index:

Apodization
-----------



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example, we perform exponential window multiplication to apodize a NMR signal in the ti...">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_processing/apodization/images/thumb/sphx_glr_plot_proc_em_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_processing_apodization_plot_proc_em.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Exponential window multiplication</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example, we use sine bell or squared sine bell window multiplication to apodize a NMR s...">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_processing/apodization/images/thumb/sphx_glr_plot_proc_sp_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_processing_apodization_plot_proc_sp.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Sine bell and squared Sine bell window multiplication</div>
    </div>


.. raw:: html

    </div>


.. toctree::
   :hidden:

   /gettingstarted/examples/gallery/auto_examples_processing/apodization/plot_proc_em
   /gettingstarted/examples/gallery/auto_examples_processing/apodization/plot_proc_sp

